app/assets/stylesheets/redesign/layout/_nav-menu.scss
/* [Nav Menu]
-------------------------------------------------------*/
.nav-menu-wrap {
  text-transform: none;
  background: $c-neutral-white;
  padding: 20px 0;

  .panel-highlight {
    margin: 0;
  }

  @media (max-width: 1400px) {
    .row{
      ul{
        margin: 10px 7px 0 0px;
      }
    }
  }

  ul {
    float: left;
    margin: 10px 0 0 50px;
    padding: 0;
    list-style: none;

    &:first-child {
      margin-left: 0;
    }

  }

  li {
    display: block;
    margin-bottom: 8px;
    font-size: 16px;

    a {
      display: inline-block;
      color: $c-neutral-black;
      border-bottom: solid transparent 1px;

      &:hover,
      &:focus {
        color: $c-neutral-black;
        border-color: $c-neutral-black;
      }

    }

  }

  .two-cols ul {
    padding-left: 0;
    list-style: none;
  }

  .title {
    padding-bottom: 5px;
    text-transform: uppercase;
    font-size: 1.3rem;
    font-weight: 600;
  }

  @media (min-width: $bootstrap-md-width) {

    .two-cols {

      .title {
        width: 100%;
        padding-top: 9px;
      }

      ul {
        float: left;
        width: 45%;
        padding-right: 10px;
        margin-left: 0;
      }

    }

  }

  @media (max-width: 1200px){
    width: 100%;
    margin: 0;
    left: 0;
    right: 0;
    border-left-color: transparent;
    border-right-color: transparent;
  }

}

// On-page/Anchor navigation
.local-navigation-wrapper {
  display: block;
}

.local-navigation {
  width: 100%;
  text-transform: none;
  padding: 5px 15px;

  &.fixed-nav {
    position: fixed;
    z-index: 3;
    background: $c-neutral-white;
    left: 0;
    @include transition(all 0.3s ease-in-out);
  }

  .nav-wrapper {
    padding: 0;
  }

  .slick-list {
    margin: 0 auto;
  }

  .slick-track {
    width: auto;
  }

  .slick-arrow {
    color: $c-neutral-10;
    font-size: 2rem;
    top: 23px;
    padding: 18px 0;
    background: $c-neutral-white;
    @include box-shadow( 0 0 20px 10px rgba($c-neutral-white, 0.7) );
    width: 16px;
  }

  // This is needed because the left arrow looks smaller than the right one with the default value above
  .slick-arrow:first-child {
    font-size: 3rem;
  }

  .slick-arrow:last-child {
    right: 0;
  }

  .slick-disabled {
    visibility: hidden;
  }

  ul {
    text-align: center;
    min-width: 100%;
    left: 0;
    padding: 0;
    margin: 0;
  }

  li {
    padding: 0;
    margin: 0 -2px;
  }

  a {
    color: $c-neutral-8;
    border-bottom: 1px solid $c-neutral-8;
    padding: 18px 40px;
    display: block;
    font-size: 1.4rem;
  }

  .nav li {

    &.active a,
    a:hover {
      background: none;
      border-color: $c-neutral-black;
      color: $c-neutral-black;
      font-weight: 500;
    }

  }

  @media (max-width: $bootstrap-md-width - 1px) {

    &.fixed-nav-mobile {
      width: 100%;
      margin: 0;
      position: fixed;
      bottom: 0;
      left: 0;
      right: 0;
      background: $c-neutral-white;
      z-index: 3;
      @include transition(all 0.3s ease-in-out);
    }

  }

}

// Mobile navigation
#sideMenu .nav.navbar-nav ul {
  padding-left: 0;
}

